# advent-of-code-2024

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  solutions.h
src/solutions/day_1/: day_1.cpp  day_1.h
src/solutions/day_10/: day_10.cpp  day_10.h
src/solutions/day_11/: day_11.cpp  day_11.h
src/solutions/day_12/: day_12.cpp  day_12.h
src/solutions/day_13/: day_13.cpp  day_13.h
src/solutions/day_14/: day_14.cpp  day_14.h
src/solutions/day_15/: day_15.cpp  day_15.h  warehouse.cpp  warehouse.h
src/solutions/day_16/: day_16.cpp  day_16.h
src/solutions/day_17/: day_17.cpp  day_17.h
src/solutions/day_18/: day_18.cpp  day_18.h
src/solutions/day_19/: day_19.cpp  day_19.h
src/solutions/day_2/: day_2.cpp  day_2.h
src/solutions/day_20/: day_20.cpp  day_20.h
src/solutions/day_21/: day_21.cpp  day_21.h
src/solutions/day_22/: day_22.cpp  day_22.h
src/solutions/day_23/: day_23.cpp  day_23.h
src/solutions/day_24/: day_24.cpp  day_24.h
src/solutions/day_25/: day_25.cpp  day_25.h
src/solutions/day_3/: day_3.cpp  day_3.h
src/solutions/day_4/: day_4.cpp  day_4.h
src/solutions/day_5/: day_5.cpp  day_5.h
src/solutions/day_6/: day_6.cpp  day_6.h
src/solutions/day_7/: day_7.cpp  day_7.h
src/solutions/day_8/: day_8.cpp  day_8.h
src/solutions/day_9/: day_9.cpp  day_9.h
src/utility/: concepts.h  day.cpp  day.h  io.cpp  io.h  math.h  string.cpp  string.h  utility.h  vec.h
